Feature fantasy api (#215)
* Add fantasy endpoint

* Added filter by position and name

* change seasonID->season

* Add documentation

* simplified query

* updated documentation - fantasy

* add in null checks
