# public/swagger.json
@@ -46,6 +46,10 @@
     {
       "name": "livestreams",
       "description": "Lists all livestreams for each league."
+    },
+    {
+      "name": "fantasy",
+      "description": "Lists all fantasy points for SHl players."
     }
   ],
   "schemes": ["https", "http"],
@@ -1703,6 +1707,43 @@
               "type": "array",
               "items": {
                 "$ref": "#/definitions/Livestream"
+              }
+            }
+          }
+        }
+      }
+    },
+    "/fantasy": {
+      "get": {
+        "tags": ["fantasy"],
+        "summary": "List of Fantasy Information",
+        "description": "A listing of the fantasy information about SHL players.",
+        "operationId": "getFantastyInformation",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "season",
+            "in": "query",
+            "type": "number"
+          },
+          {
+            "name": "position",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Fantasy"
               }
             }
           }
@@ -3523,6 +3564,27 @@
         "isLive": {
           "type": "string",
           "example": "live"
+        }
+      }
+    },
+    "Fantasy": {
+      "type": "object",
+      "properties": {
+        "seasonID": {
+          "type": "number",
+          "example": 59
+        },
+        "position": {
+          "type": "string",
+          "example": "D"
+        },
+        "name": {
+          "type": "string",
+          "example": "Lyle Odelein III"
+        },
+        "fantasyPoints": {
+          "type": "number",
+          "example": 588.2
         }
       }
     }
